# dteam

./: .gitignore  AC_CRITERIA.md  AGENTS.md  ATTRIBUTION.md  BCINR_STRATEGY.md  CLAUDE.md  Cargo.toml  DOD_VERIFICATION.md  DPIE_Technical_Whitepaper_v1.0.0.aux  DPIE_Technical_Whitepaper_v1.0.0.lot  DPIE_Technical_Whitepaper_v1.0.0.out  DPIE_Technical_Whitepaper_v1.0.0.tex  DPIE_Technical_Whitepaper_v1.0.0.toc  GEMINI.md  IDEAS.md  ML_INVENTORY.md  Makefile  Makefile.toml  PORTING_SUMMARY.md  THESIS.md  VISION_2030_ROADMAP.md  architecture.tex  branches_to_merge_unmerged_3.txt  contest_results.tex  dteam.toml  final_fix.py  final_fix_bclr.py  find_missing.py  fix_correctly.py  fix_examples.py  fix_extraction.py  fix_final.py  fix_imports.py  fix_jtbd.py  fix_remaining.py  fix_tests.py  fix_use.py  full_list.txt  generate_perfect_bcinr.py  implement_all.py  (+12 more)
crates/ccog/: CLAUDE.md  Cargo.toml  deny.toml  fix_abi_jsonld.py  fix_bundle.py  fix_dendral.py  fix_eliza.py  fix_jsonld.py  fix_prolog.py
crates/ccog/benches/: ccog_hot_path_bench.rs  dx_bench.rs  kernel_bench.rs  pack_dev_bench.rs  pack_edge_bench.rs  pack_enterprise_bench.rs  pack_lifestyle_bench.rs
crates/ccog/docs/: end_to_end_jtbd.md
crates/ccog/fuzz/: Cargo.toml
crates/ccog/scripts/: bench-all.sh
crates/ccog/src/: admit.rs  bark_artifact.rs  bark_kernel.rs  compiled.rs  compiled_hook.rs  conformance.rs  construct8.rs  facade.rs  graph.rs  hooks.rs  ids.rs  instinct.rs  lib.rs  macros.rs  multimodal.rs  powl.rs  powl64.rs  receipt.rs  trace.rs  verdict.rs
crates/ccog/tests/: a2a_delegation_tests.rs  (+31 more)
(+1444 files in other folders)
