[package]
name = "unibit-smoke"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"
unibit-l1 = { path = "../unibit-l1" }
unibit-kernel = { path = "../unibit-kernel" }
unibit-motion = { path = "../unibit-motion" }

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_docs = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"